# badgegen

./: .gitignore  Dockerfile  LICENSE  find_by_name  pyproject.toml
badgegen/: badgegen.py
